[package]
name = "gemfile-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
annotate-snippets = "0.11.5"
anyhow = "1.0.95"
derive-new = "0.7.0"
expect-test = "1.5.1"
ruby-prism = { path = "/Users/segiddins/Development/github.com/ruby/prism/rust/ruby-prism" }
ruby-prism-sys = { path = "/Users/segiddins/Development/github.com/ruby/prism/rust/ruby-prism-sys" }
salsa = { git = "https://github.com/salsa-rs/salsa.git", branch = "master" }
winnow = "0.7.1"
